# GlazeWM-Config-Editor

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  tailwind.config.js
.github/workflows/: ci.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/editor/: VisualEditor.tsx  YamlEditor.tsx
src/components/editor/sections/: FocusBordersSection.tsx  GapsSection.tsx  GeneralSection.tsx  KeybindingsSection.tsx  WindowBehaviorSection.tsx  WindowEffectsSection.tsx  WindowRulesSection.tsx  WorkspacesSection.tsx
src/components/history/: HistoryPanel.tsx
src/components/profiles/: ProfilesPanel.tsx
src/components/ui/: ToastContainer.tsx
src/hooks/: useAppState.ts  useToast.ts
src/lib/: storage.ts  tauri-bridge.ts  yaml-utils.ts
src/types/: index.ts
