[package]
name = "glaze-wm-config-editor"
version = "0.1.0"
description = "GlazeWM Config Editor"
authors = ["GlazeWM Config Editor Contributors"]
edition = "2021"

[lib]
name = "glaze_wm_config_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "glaze-wm-config-editor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = "0.4"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
